--- a/extracted.bib
+++ b/extracted.bib
@@ -465,6 +465,103 @@
   doi =           {10.1016/j.molstruc.2003.11.010},
 }
 
+@inproceedings{Muller2005a,
+  author =        {{M{\"u}ller}, H.~S.~P. and {Schl{\"o}der}, F. and
+                   {Stutzki}, J. and {Schlemmer}, S. and {Giesen}, T. and
+                   {Schilke}, P.},
+  booktitle =     {IAU Symposium},
+  pages =         {62P},
+  series =        {IAU Symposium},
+  title =         {{The Cologne Database for Molecular Spectroscopy,
+                   CDMS: A Tool for Astrochemists and Astrophysicists}},
+  volume =        {235},
+  year =          {2005},
+  abstract =      {The computer-accessible Cologne Database for
+                   Molecular Spectroscopy (CDMS) contains a catalog of
+                   rotational transition frequencies of molecular
+                   species that have been or may be identified in the
+                   interstellar medium, circumstellar envelopes, or in
+                   planetary atmospheres (M{\"u}ller et al. 2001,
+                   M{\"u}ller et al. 2005). Particular emphasis has been
+                   put on supplying data in the submillimeter and
+                   terahertz frequency ranges as well as data with
+                   increased accuracy. The entries are created by
+                   fitting critically evaluated experimental data to
+                   established Hamiltonian models to ensure entries that
+                   are as reliable as possible. Separate entries are
+                   provided for minor isotopic species or for excited
+                   vibrational states (except for diatomics) as far as
+                   appropriate. The catalog is updated continuously.
+                   More than 300 entries are available as of April 2005.
+                   Examples of recently included light hydride species,
+                   deuterated compounds, vibrationally excited species,
+                   and complex molecules will be listed, and the need
+                   for additional data shall be discussed. Several
+                   output options have been implemented, and examples
+                   will be demonstrated. Future plans will be discussed,
+                   e. g. using resources other than the CDMS catalog in
+                   the search and conversion routines and creating more
+                   entries involving rovibrational transitions.
+                   Transition frequencies are available not only for
+                   species detected in space but also for compounds that
+                   may be detected in the future. Therefore, the catalog
+                   is an ideal tool for analyzing line surveys and for
+                   searching for new molecules in space. In addition,
+                   the CDMS contains a web page that lists molecules
+                   detected in astronomical sources, a help page for
+                   fitting rotationally resolved spectra, as well as
+                   information on recent changes in the CDMS. The CDMS
+                   is available online free of charge via the alias
+                   http://www.cdms.de/ and via a link on the KOSMA web
+                   page http://www.ph1.uni-koeln.de/.},
+}
+
+@{Lovas2005a,
+  author =        {{Lovas}, F.~J. and {Tiemann}, E.},
+  month =         {nov},
+  title =         {NIST Standard Reference Database 114},
+  year =          {2005},
+  url =           {https://www.nist.gov/pml/diatomic-spectral-database},
+}
+
+@article{Pickett1998a,
+  author =        {{Pickett}, H.~M. and {Poynter}, R.~L. and
+                   {Cohen}, E.~A. and {Delitsky}, M.~L. and
+                   {Pearson}, J.~C. and {M{\"u}ller}, H.~S.~P.},
+  journal =       {\jqsrt},
+  month =         nov,
+  pages =         {883-890},
+  title =         {{Submillimeter, millimeter and microwave spectral
+                   line catalog.}},
+  volume =        {60},
+  year =          {1998},
+  abstract =      {This paper describes a computer-accessible catalog of
+                   submillimeter, millimeter, and microwave spectral
+                   lines in the frequency range between 0 and 10,000 GHz
+                   (i.e. wavelengths longer than 30 mum). The catalog
+                   can be used as a planning guide or as an aid in the
+                   identification and analysis of observed spectral
+                   lines in the interstellar medium, the Earth's
+                   atmosphere, and the atmospheres of other planets. The
+                   information listed for each spectral line includes
+                   the frequency and its estimated error, the intensity,
+                   the lower state energy, and the quantum number
+                   assignment. The catalog is continuously updated and
+                   at present has information on 331 atomic and
+                   molecular species and includes a total of 1,845,866
+                   lines. The catalog has been constructed by using
+                   theoretical least-squares fits of published spectral
+                   lines to accepted molecular models. The associated
+                   predictions and their estimated errors are based upon
+                   the resultant fitted parameters and their covariance.
+                   Future versions of this catalog will add more atoms
+                   and molecules and update the present listings as new
+                   data appear. The catalog is available on-line via
+                   anonymous FTP at spec.jpl.nasa.gov and on the world
+                   wide web at http://spec.jpl.nasa.gov.},
+  doi =           {10.1016/S0022-4073(98)00091-0},
+}
+
 @article{Barton2014a,
   author =        {{Barton}, E.~J. and {Chiu}, C. and {Golpayegani}, S. and
                    {Yurchenko}, S.~N. and {Tennyson}, J. and
@@ -765,53 +862,6 @@
                    2009.},
   doi =           {10.1088/0004-637X/765/1/40},
   eid =           {40},
-}
-
-@article{Dayou2006a,
-  author =        {{Dayou}, F. and {Balan{\c c}a}, C.},
-  journal =       {\aap},
-  month =         nov,
-  pages =         {297-305},
-  title =         {{Rotational excitation of SiO by collisions with
-                   helium}},
-  volume =        {459},
-  year =          {2006},
-  abstract =      {Context: .Within shocked regions of the interstellar
-                   medium and circumstellar environment of AGB stars the
-                   proper modelling of SiO line emission through non-LTE
-                   radiative transfer calculations requires accurate
-                   values of collisional rate coefficients. Aims: .The
-                   present study focuses on the transitions among the
-                   rotational levels of the SiO molecule in its ground
-                   vibrational state induced by collision with He. The
-                   H2 molecule being the main colliding partner for the
-                   astrophysical regions of interest, the collisional
-                   process between SiO and para-H2(j=0) is also
-                   investigated in an approximated way. Methods: .A new
-                   2D SiO-He potential energy surface is computed by
-                   means of highly correlated ab initio calculations.
-                   Collisional rate coefficients corresponding to the
-                   pure rotational (de)excitation of SiO by collision
-                   with He are obtained from close-coupling quantum
-                   scattering calculations of inelastic cross sections.
-                   The SiO-He potential energy surface is also employed
-                   to compute rate coefficients for the rotational
-                   (de)excitation of SiO by collision with para-H2(j=0).
-                   Results: .Rate coefficients for rotational levels up
-                   to j=26 and kinetic temperatures in the range 10-300
-                   K are obtained for the SiO-He colliding system. The
-                   large asymmetry of the SiO-He potential energy
-                   surface induces a propensity rule that favours odd
-                   Delta j transitions over even Delta j. The estimated
-                   values of the SiO-para-H2(j=0) rate coefficients are
-                   compared with those of Turner et al. (1992) for the
-                   twenty first rotational levels. As a result of
-                   significant differences between the SiO-He
-                   interaction potentials employed in the two studies,
-                   the rate coefficients are found to differ by a factor
-                   2.5-5 for the main rotational transitions, whatever
-                   the temperature range.},
-  doi =           {10.1051/0004-6361:20065718},
 }
 
 @inproceedings{Dickinson1975a,
