update bib, tables

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -276,7 +276,7 @@ We have fit Gaussian line profiles to each of the transitions we flagged as
 `detected' in Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
 The fits are reported in Tables
 \ref{tab:NaCl_salt_lines}-\ref{tab:41K37Cl_salt_lines}.  Some of these
-measurements (e.g., the ?????? K37 v=0 45-44 line) are discrepantly[wc]
+measurements (e.g., of the KCl v=5 45-44 line) are discrepantly
 high, suggesting that they are blends with other species as denoted in 
 Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
 
