--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -10,17 +10,22 @@
 \begin{document}
 \input{authors}
 
-\title{Orion \sourcei's disk is salty}
+\title{Salts in the disk around Orion \sourcei}
 \begin{abstract}
     We report the detection of NaCl and KCl and their $^{37}$Cl and $^{41}$K
-    isotopologues toward the disk around Orion \sourcei.  Over 60 transitions
+    isotopologues toward the disk around Orion \sourcei.  About 60 transitions
     of these molecules were identified.
     This is the first detection of these molecules in the interstellar
     medium not associated with the ejecta of evolved stars.  It is also
     the first ever detection of the vibrationally excited states of these
-    lines in the ISM, up to v=8.
-    These lines are likely to be unique tracers of a rare process, either
-    the birth of high-mass stars or the aftermath of a stellar collision.
+    lines in the ISM above $v=1$, with firm detections up to $v=6$.
+    The salt emission traces the region just above the continuum disk,
+    possibly forming the base of the outflow.  We examine several possible
+    explanations of the observed high excitation lines, concluding that the
+    vibrational states are most likely to be radiatively excited via
+    rovibrational transitions in the 25-35 \um (NaCl) and 35-45 \um (KCl)
+    range.  These molecules may provide a unique toolkit for measuring
+    the radiation environment around accreting young stars.
 \end{abstract}
 
 \section{Introduction}
@@ -696,8 +701,9 @@ medium.  They are usually assumed to be rapidly incorporated into dust grains
 after being ejected from dying stars \citep[e.g.,][]{Milam2007a}.  Since we
 observe NaCl and KCl in the atmosphere of the disk, it is clear that
 there is a zone where either dust has not (yet?) formed or
-where dust is destroyed and returned to the gas phase.  We argue that
-the dust must be destroyed almost immediately as it is launched into the outflow.
+where dust is destroyed and returned to the gas phase.  We argue that the dust
+must be destroyed almost immediately as it is launched into the disk-driven
+outflow \citep{Hirota2017a}.
 % As above, we evaluate several possibilities to explain the presence of
 % these molecules.
 
